kubernetes/apps/monitoring/ingressroute-grafana.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    external-dns.kubernetes.io/target: <path:cloudflared:tunnel-config#tunnel-target>
    external-dns.kubernetes.io/cloudflare-proxied: "true"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.<path:cert-manager:domain-config#domain>`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-grafana
          port: 80
  tls: {}
